--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,16 +16,13 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:minHeight="?attr/actionBarSize">
 
             <ImageView
                 android:id="@+id/ivToolbarLogo"
-                android:layout_width="50dp"
+                android:layout_width="200dp"
                 android:layout_height="50dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginStart="14dp"
                 app:srcCompat="@drawable/nav_logo_whiteout" />
 
         </androidx.appcompat.widget.Toolbar>
