--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -4,17 +4,17 @@
 
     <item
         android:id="@+id/Home"
-        android:icon="@drawable/instagram_home_outline_24"
+        android:icon="@drawable/home_selector"
         android:title="Home"
         app:showAsAction="always" />
     <item
         android:id="@+id/Compose"
-        android:icon="@drawable/instagram_new_post_outline_24"
+        android:icon="@drawable/compose_selector"
         android:title="Compose"
         app:showAsAction="always" />
     <item
         android:id="@+id/Profile"
-        android:icon="@drawable/instagram_user_outline_24"
+        android:icon="@drawable/profile_selector"
         android:title="Profile"
         app:showAsAction="always" />
 </menu>
