--- a/app/src/main/res/layout/fragment_compose.xml
+++ b/app/src/main/res/layout/fragment_compose.xml
@@ -49,7 +49,7 @@
         android:text="@string/takePic" />
 
     <ImageView
-        android:id="@+id/ivPostImage"
+        android:id="@+id/ivProfileImage"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_below="@+id/btnTakePic"
