--- a/app/src/main/res/menu/menu_profile.xml
+++ b/app/src/main/res/menu/menu_profile.xml
@@ -3,6 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/setProfilePic"
+        android:title="Set Profile Picture" />
+    <item
         android:id="@+id/Logout"
         android:title="Logout" />
 </menu>
