--- a/app/src/main/res/layout/fragment_compose.xml
+++ b/app/src/main/res/layout/fragment_compose.xml
@@ -61,7 +61,7 @@
         android:id="@+id/btnSubmit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/ivPostImage"
+        android:layout_below="@+id/ivProfileImage"
         android:layout_marginTop="16dp"
         android:text="@string/submit" />
 
