--- a/app/src/main/res/layout/fragment_set_profile_picture.xml
+++ b/app/src/main/res/layout/fragment_set_profile_picture.xml
@@ -6,6 +6,30 @@
     android:layout_height="match_parent"
     tools:context=".fragments.SetProfilePictureFragment">
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minHeight="?attr/actionBarSize">
+
+            <ImageView
+                android:id="@+id/ivToolbarLogo"
+                android:layout_width="200dp"
+                android:layout_height="50dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="14dp"
+                app:srcCompat="@drawable/nav_logo_whiteout" />
+
+        </androidx.appcompat.widget.Toolbar>
+    </com.google.android.material.appbar.AppBarLayout>
+
     <Button
         android:id="@+id/btnTakePic"
         android:layout_width="match_parent"
@@ -27,7 +51,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
+        android:layout_below="@id/appBar"
         android:layout_marginStart="0dp"
         android:layout_marginTop="15dp"
         android:gravity="center"
