--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#DDDBE1</color>
-    <color name="colorPrimaryDark">#DDDBE1</color>
+    <color name="colorPrimaryDark">#B9B7BD</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="blue">#3F97F0</color>
     <color name="green">#71C050</color>
